# rocm_sgemm

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  bench.hpp
benchmark/gemm/: bench.cpp
benchmark/rocblas/: bench.cpp
common/: matrix.hpp
docs/: generate_report.py  square.md
rocblas_wrapper/include/rocblas_wrapper/: gemm.hpp
rocblas_wrapper/src/: gemm.cpp
rocm_sgemm/: CMakeLists.txt
rocm_sgemm/config/: gemm_config.json  generate_config.py  tune.py  tuner.cpp
rocm_sgemm/include/rocm_sgemm/: gemm.hpp  kernel_launcher.hpp  kernel_lookup.hpp
rocm_sgemm/include/rocm_sgemm/kernel/: common.hpp  fragment.hpp  kernel.hpp  load.hpp  mapping.hpp
rocm_sgemm/src/: gemm.cpp
test/: CMakeLists.txt  test.hpp
test/gemm/: test.cpp
test/rocblas/: test.cpp
